# ccfullsearch

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  research.md
.claude-plugin/: plugin.json
.claude/skills/ccs/: SKILL.md
.claude/skills/record-demo/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/release-ccs/: SKILL.md
.github/workflows/: ci.yml  publish-crates.yml  release.yml
docs/: refactoring-plan.md  use-cases.md
docs/plans/: 2026-03-19-fix-empty-query-stale-results.md  2026-04-02-claude-code-source-research.md  2026-04-02-cleanup-and-correctness-fixes.md  2026-04-02-remove-linearization-improve-resume.md  2026-04-05-ccs-overlay-integration.md  2026-04-06-codex-adversarial-fixes.md  2026-04-11-architecture-refactoring.md  2026-04-12-ai-session-reranking.md  2026-04-13-adaptive-help-bar.md  2026-04-13-session-message-count.md  2026-04-14-fix-preview-content-parsing.md  2026-04-14-preview-and-scroll-fix.md  2026-04-30-fix-stuck-searching-flag.md
docs/plans/completed/: 2026-02-19-cli-mode-design.md  (+17 more)
skill/: SKILL.md
src/: ai.rs  cli.rs  lib.rs  main.rs  recent.rs  session.rs  update.rs
src/dag/: mod.rs
src/resume/: fork.rs  launcher.rs  mod.rs  path_codec.rs
src/search/: group.rs  message.rs  mod.rs  ripgrep.rs
src/session/: mod.rs  record.rs
src/tree/: mod.rs
src/tui/: app.rs  dispatch.rs  mod.rs  render_search.rs  render_tree.rs  search_mode.rs  state.rs  tree_mode.rs  ui.rs  view.rs
tests/: cli_list.rs  cli_overlay.rs  cli_pick.rs  cli_search.rs  render_snapshots.rs  resume_resolution.rs  tree_parsing.rs
tests/fixtures/: ansi_session.jsonl  branched_session.jsonl  codex_session.jsonl  compaction_session.jsonl  desktop_audit_session.jsonl  linear_session.jsonl  ralphex_session.jsonl
(+10 files in other folders)
