[package]
name = "ccs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
which = "7.0"
dirs = "6.0"
regex = "1.10"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
