[package]
name = "ccfullsearch"
version = "0.6.0"
edition = "2021"
description = "A TUI and CLI tool for searching and browsing Claude Code and Claude Desktop session history"
license = "MIT"
repository = "https://github.com/materkey/ccfullsearch"
homepage = "https://github.com/materkey/ccfullsearch"
readme = "README.md"
keywords = ["claude", "search", "tui", "cli", "session"]
categories = ["command-line-utilities"]

[[bin]]
name = "ccs"
path = "src/main.rs"

[lib]
name = "ccs"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
which = "7.0"
dirs = "6.0"
regex = "1.10"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
tempfile = "3.0"
semver = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
